# pg_sentence_transformer

./: .exrc  Makefile  README.md  justfile  pg_sentence_transformer--0.1.sql  pg_sentence_transformer.c  pg_sentence_transformer.control  pyproject.toml
pg_sentence_transformer/: model.py
